samples/_failures_safe/1761300333_097f04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f4acb65.c: In function ‘process_graph’:
./samples/SAFE/__tmp_7f4acb65.c:150:23: error: expected ‘)’ at end of input
  150 |     traversal(g, start
      |              ~        ^
      |                       )
./samples/SAFE/__tmp_7f4acb65.c:150:5: error: too few arguments to function ‘traversal’
  150 |     traversal(g, start
      |     ^~~~~~~~~
./samples/SAFE/__tmp_7f4acb65.c:150:5: error: expected declaration or statement at end of input
